--- a/assets/style.css
+++ b/assets/style.css
@@ -8,16 +8,15 @@
 html, body {
   width: 100%;
   height: 100%;
-  background: #000;
+  background: black;
   overflow: hidden;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
 }
 
 /* ===== STAGE ===== */
 .stage {
   width: 100vw;
   height: 100vh;
-  background: #000;
+  background: black;
 
   display: flex;
   align-items: center;
@@ -26,6 +25,7 @@ html, body {
 
 /* ===== CINEMA FRAME ===== */
 .cinema {
+  position: relative;
   width: 100%;
   height: 100%;
 
@@ -52,7 +52,7 @@ html, body {
   z-index: 1;
 }
 
-/* ===== IMAGE (CINEMA LETTERBOXING) ===== */
+/* ===== IMAGE ===== */
 .slide img {
   max-width: 100%;
   max-height: 100%;
@@ -64,5 +64,5 @@ html, body {
   object-position: center;
 
   display: block;
-  background: #000;
+  background: black;
 }
